--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,3 @@
 Changes since last version:
 
-Added ability to set alarms in My Medicine Pal
+Added ability for MyMedicinePal to send alarms to STM32
